finished up with the project, i might add a few more changes however for now i am okay with what i have produced.

--- a/courses.html
+++ b/courses.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css.map">
@@ -14,19 +15,19 @@
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
       <!-- removed the div here -->
       <div class="container">
-        <a class="navbar-brand" href="#"><img class="maven_pic" src="images/maven_academy.svg" alt=""></a>
+        <a class="navbar-brand" href="index.html"><img class="maven_pic" src="images/maven_academy.svg" alt=""></a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item mx-3"><a class="nav-link" href="">Home</a>
+          <li id="text" class="nav-item mx-3"><a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item mx-3"><a class="nav-link" href="">Courses</a>
+          <li id="text" class="nav-item mx-3"><a class="nav-link" href="#">Courses</a>
           </li>
-          <li class="nav-item mx-3"><a class="nav-link" href="">Contact Us</a>
+          <li id="text" class="nav-item mx-3"><a class="nav-link" href="#">Contact Us</a>
           </li>
-          <li class="nav-item mx-3"><a class="nav-link" href="">Cart</a>
+          <li id="text" class="nav-item mx-3"><a class="nav-link" href="cart.html">Cart</a>
           </li>
           <a href="#"><img class="img" src="images/gift-icon.svg" alt="" width="50px" height="30px"></a>
         </ul>
@@ -44,13 +45,13 @@
         <div class="col-3">
           <div class="my-5 ml-3">
             <div>
-              <h6 class="font-weight-bold small text-center text-primary" style="font-size: 15px ;">Become a Full Stack Web Developer</h6>
-              <p class="text-center small">12 Week Course - In classroom</p> 
+              <h6 id="text" class="font-weight-bold small text-center text-primary" style="font-size: 15px ;">Become a Full Stack Web Developer</h6>
+              <p id="text" class="text-center small">12 Week Course - In classroom</p> 
             </div>
           <div class="d-flex justify-content-center">
           <img class="image-fluid ml-4" src="images/full-stack-banner.png" alt="" style="width: 15rem;">
           </div>
-          <p class="text-center text-primary font-weight-bold">R26,000,00 Excl Vat</p>
+          <p id="text" class="text-center text-primary font-weight-bold">R26,000,00 Excl Vat</p>
           <div class="" style="width: 190px;">
             <p id="addCart" style="padding-top: 5px;">Add to cart</p>  
           </div>
@@ -58,37 +59,37 @@
         </div>
         <div class="col-8 mt-4 ml-5">
           <div class="mb-5">
-            <h1>
+            <h1 id="text">
               Course Outline
             </h1>
           </div>
           <div class="row ml-1 my-4">
             <div class="col small">
-              <a href="">Pre Work</a>
+              <a id="text" href="">Pre Work</a>
             </div>
             <div class="col small">
-             <a href=""> Module 1</a>
+             <a id="text" href=""> Module 1</a>
             </div>
             <div class="col small">
-              <a href="">Module 2</a>
+              <a id="text" href="">Module 2</a>
             </div>
             <div class="col small">
-              <a href="">Module 3</a>
+              <a id="text" href="">Module 3</a>
             </div>
             <div class="col small">
-              <a href="">Module 4</a>
+              <a id="text" href="">Module 4</a>
             </div>
             <div class="col-3 small">
-              <a href="">Master class electives</a>
+              <a id="text" href="">Master class electives</a>
             </div>
           </div>
           <div class="row">
             <div class="bg-light my-3 p-5 ml-4">
               <div class="mb-4">
-                <h4>Pre-Work</h4>
+                <h4 id="text">Pre-Work</h4>
               </div>
               <div>
-                <p style="line-height: 2.19;">You don’t have to understand everything about the MEAN stack to dive in to the introductory tutorial. Your initial challenge will be to build Google’s official “Tour of Heroes” app. Don’t worry! We’re going to explain the hard parts in great detail during your course.</p>
+                <p id="text" style="line-height: 2.19;">You don’t have to understand everything about the MEAN stack to dive in to the introductory tutorial. Your initial challenge will be to build Google’s official “Tour of Heroes” app. Don’t worry! We’re going to explain the hard parts in great detail during your course.</p>
               </div>
             </div>
           </div>
@@ -98,8 +99,8 @@
                <li class="media">
                 <img class="p-2 mr-5 border rounded bg-primary" src="images/bachler-icon.svg" alt="">
               <div class="media-body">
-                <p>Want to find out more about what you will learn during our 12 Week Full Stack Web Developer Course.</p> 
-                <a data-toggle="modal" data-target="#courseModal" href="">Click here to Download the Curriculum </a>
+                <p id="text">Want to find out more about what you will learn during our 12 Week Full Stack Web Developer Course.</p> 
+                <a id="text" data-toggle="modal" data-target="#courseModal" href="">Click here to Download the Curriculum </a>
 
                 <div class="modal" id="courseModal">
                   <div class="modal-dialog">
@@ -111,7 +112,7 @@
                         <ul class="list-unstyled">
                           <li class="media">
                             <img class="p-2 mr-5 border rounded bg-primary" src="images/bachler-icon.svg" alt=""> 
-                           <div class="media-body">Download the full syllabus by entering your email address below. We will send you a link via email to download the brochure.
+                           <div id="text" class="media-body">Download the full syllabus by entering your email address below. We will send you a link via email to download the brochure.
                            </div>
                           </li>
                         </ul> 
@@ -138,66 +139,66 @@
     <br>
   </section>
   <section>
-    <div class="container-fluid" style="height: auto; background-color: darkslategray">
+    <div class="container-fluid" style="height: auto; background-color: #343a40">
       <footer class="page-footer font-small indigo">
         <div class="container text-center text-md-left">
           <div class="row p-5">
             <div class="col-sm mx-auto ">
-              <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">GENERAL</h5>
+              <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">GENERAL</h5>
               <br>
               <ul class="list-unstyled">
                 <li>
-                  <a class="text-light" href="#!">Home</a>
+                  <a id="text" class="text-light" href="#!">Home</a>
                 </li>
                 <br>
                 <li>
-                  <a class="text-light" href="#!">Faq</a>
+                  <a id="text" class="text-light" href="#!">Faq</a>
                 </li>
               </ul>
             </div>
             <hr class="clearfix w-100 d-md-none">
             <div class="col-sm mx-auto">
-              <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">WHY US</h5>
+              <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">WHY US</h5>
               <br>
               <ul class="list-unstyled">
                 <li>
-                  <a class="text-light" href="#!">Why Study with us?</a>
+                  <a id="text" class="text-light" href="#!">Why Study with us?</a>
                 </li>
                 <br>
                 <li>
-                  <a class="text-light" href="#!">Financial Aid - Study for Just R1</a>
+                  <a id="text" class="text-light" href="#!">Financial Aid - Study for Just R1</a>
                 </li>
                 <br>
                 <li>
-                  <a class="text-light" href="#!">Internship - Work, Learn & Earn</a>
+                  <a id="text" class="text-light" href="#!">Internship - Work, Learn & Earn</a>
                 </li>
               </ul>
             </div>
             <hr class="clearfix w-100 d-md-none">
             <div class="col-md-3 mx-auto align-iet">
-              <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">DEVELOPER COURSES</h5>
+              <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">DEVELOPER COURSES</h5>
               <br>
               <ul class="list-unstyled">
                 <li>
-                  <a class="text-light" href="#!">Full Stack Web Developer</a>
+                  <a id="text" class="text-light" href="#!">Full Stack Web Developer</a>
                 </li>
               </ul>
             </div>
             <hr class="clearfix w-100 d-md-none">
             <div class="col-md-4 mx-auto">
-              <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">CONTACT US</h5>
+              <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">CONTACT US</h5>
               <br>
               <ul class="list-unstyled">
                 <li>
-                  <img class="img-fluid mr-2" src="images/phone-icon.svg" alt=""><a class="text-light font-weight-bold" href="+27 21 461 68 17">+27 21 461 68 17</a>
+                  <img class="img-fluid mr-2" src="images/phone-icon.svg" alt=""><a class="text-light font-weight-bold" href="+27 21 461 68 17" id="text">+27 21 461 68 17</a>
                 </li>
                 <br>
                 <li>
-                  <img class="img-fluid mr-2" src="images/email-icon.svg" alt=""><a class="text-light small" href="#!">hello@themavenacademy.one</a>
+                  <img class="img-fluid mr-2" src="images/email-icon.svg" alt=""><a class="text-light small" href="#!" id="text">hello@themavenacademy.one</a>
                 </li>
                 <br>
                 <li>
-                  <img class="img-fluid mr-2" src="images/location-icon.svg" alt=""><a class="text-light small p-0" href="#!">Office F01A, Brookside Office Park, 11 Imam Haron Road, Claremont, Western Cape, 7708</a>
+                  <img class="img-fluid mr-2" src="images/location-icon.svg" alt=""><a class="text-light small p-0" href="#!" id="text">Office F01A, Brookside Office Park, 11 Imam Haron Road, Claremont, Western Cape, 7708</a>
                 </li>
               </ul>
             </div>
@@ -207,9 +208,9 @@
     </div>   
   </section>
   <footer>
-    <nav class="navbar navbar-expand-sm" style="height: 100px; background-color: #000000;">
+    <nav class="navbar navbar-expand-sm" style="height: 100px; background-color: #0E1011;">
       <ul class="navbar-nav">
-        <li class="nav-items text-light ml-5 footer-copyright">All Rights Reserved, Maven Academy Ptd()Ltd.</li>
+        <li class="nav-items text-light ml-5 footer-copyright" id="text">All Rights Reserved, Maven Academy Ptd()Ltd.</li>
       </ul>
       <div class="ml-auto pr-5">
         <a href="#"><img class="border rounded bg-primary mx-1" src="images/facebook.svg" alt=""></a>
