--- a/cart.html
+++ b/cart.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css.map">
+  <link rel="stylesheet" href="css/main.css">
   <title>Cart</title>
 </head>
 <body>
@@ -14,49 +15,50 @@
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top ">
       <!-- removed the div here -->
       <!-- <div class="container"> -->
-        <a class="navbar-brand" href="#"><img class="maven_pic" src="images/maven_academy.svg" alt=""></a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item mx-3"><a class="nav-link" href="">Home</a>
-          </li>
-          <li class="nav-item mx-3"><a class="nav-link" href="">Courses</a>
-          </li>
-          <li class="nav-item mx-3"><a class="nav-link" href="">Contact Us</a>
-          </li>
-          <li class="nav-item mx-3"><a class="nav-link" href="" data-toggle="modal" data-target="#cartModal">Cart</a>
-          </li>
-          <a href="#"><img class="img" src="images/gift-icon.svg" alt="" width="50px" height="30px"></a>
-        </ul>
-      </div>
+        <a class="navbar-brand" href="index.html"><img class="maven_pic" src="images/maven_academy.svg" alt=""></a>
+          <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" >
+           <span class="navbar-toggler-icon"></span>
+            </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                  <li id="text" class="nav-item mx-3"><a class="nav-link" href="index.html">Home</a>
+                  </li>
+                  <li id="text" class="nav-item mx-3"><a class="nav-link" href="courses.html">Courses</a>
+                  </li>
+                  <li id="text" class="nav-item mx-3"><a class="nav-link" href="#">Contact Us</a>
+                  </li>
+                  <li id="text" class="nav-item mx-3"><a class="nav-link" href="#" data-toggle="modal" data-target="#cartModal">Cart</a>
+                  </li>
+                  <a href="#"><img class="img" src="images/gift-icon.svg" alt="" width="50px" height="30px"></a>
+                </ul>
+            </div>
         <!-- Testing out if i remove the div , how it will display in live server -->
       <!-- </div>   -->
     </nav>
   </header>
   <section>
-    <div class="container mt-4 pt-5 pb-1">
-      <div class="main-title mt-3">
-        <h1>
+   <br>
+    <div class="container mt-5 pt-5 pb-1" style="height: auto;">
+      <div class="main-title mt-3 mb-5">
+        <h1 id="text">
           Cart
         </h1>
       </div>
       <div class="row">
-        <div class="col-6">
+        <div id="text" class="col-4 small">
          Products
         </div>
-        <div class="col">
-         Price
-        </div>
-        <div class="col">
-         Quantity
-        </div>
-        <div class="col">
-         Total
-        </div>
-      </div>
-      <hr>
+          <div id="text" class="col small">
+          Price
+          </div>
+            <div id="text" class="col small">
+            Quantity
+            </div>
+              <div id="text" class="col small">
+              Total
+              </div>
+          </div>
+        <hr>
       <div class="row">
         <div class="col-4">
          
@@ -88,95 +90,99 @@
         </div>
       </div>
       <hr>
+      <div class="float-right mr-5">
       <div class="row">
         <div class="col">
-          <div>
-            <h3>Cart Totals</h3>
-          </div>
+            <h3 id="text">Cart Totals</h3>
+        </div>   
+        </div> 
           <div class="row">
-            <div class="col">
+            <div id="text" class="col small">
               Subtitle
             </div>
           </div>
             <hr>
             <div class="row">
-              <div class="col">
+              <div id="text" class="col small">
                 Vat(15%)
               </div>
             </div>
             <hr>
-            <div class="row">
-              <div class="col">
+            <div id="text" class="row">
+              <div class="col small">
                 Total
               </div>
             </div>
-          </div>
-        </div>
-      </div>
-
-    </div>
+            <br>
+              <div class="row">
+                <button class="text-center" id="enquire">
+                <span id="text">Enquire</span> 
+                </button>
+              </div>
+            </div>
+          <div class="clearfix mb-5"></div>    
   </section> 
   <section>
-    <div class="container-fluid" style="height: auto; background-color: darkslategray">
+    <div class="container-fluid" style="height: auto; background-color: #343a40">
       <footer class="page-footer font-small indigo">
         <div class="container text-center text-md-left">
           <div class="row p-5">
             <div class="col-sm mx-auto ">
-              <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">GENERAL</h5>
+              <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">GENERAL</h5>
               <br>
               <ul class="list-unstyled">
                 <li>
-                  <a class="text-light" href="#!">Home</a>
+                  <a id="text" class="text-light" href="#!">Home</a>
                 </li>
                 <br>
                 <li>
-                  <a class="text-light" href="#!">Faq</a>
+                  <a id="text" class="text-light" href="#!">Faq</a>
                 </li>
               </ul>
             </div>
             <hr class="clearfix w-100 d-md-none">
             <div class="col-sm mx-auto">
-              <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">WHY US</h5>
+              <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">WHY US</h5>
               <br>
               <ul class="list-unstyled">
                 <li>
-                  <a class="text-light" href="#!">Why Study with us?</a>
+                  <a id="text" class="text-light" href="#!">Why Study with us?</a>
                 </li>
                 <br>
                 <li>
-                  <a class="text-light" href="#!">Financial Aid - Study for Just R1</a>
+                  <a id="text" class="text-light" href="#!">Financial Aid - Study for Just R1</a>
                 </li>
                 <br>
                 <li>
-                  <a class="text-light" href="#!">Internship - Work, Learn & Earn</a>
+                  <a id="text" class="text-light" href="#!">Internship - Work, Learn & Earn</a>
                 </li>
               </ul>
             </div>
             <hr class="clearfix w-100 d-md-none">
             <div class="col-md-3 mx-auto align-iet">
-              <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">DEVELOPER COURSES</h5>
+              <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">DEVELOPER COURSES</h5>
               <br>
               <ul class="list-unstyled">
                 <li>
-                  <a class="text-light" href="#!">Full Stack Web Developer</a>
+                  <a id="text" class="text-light" href="#!">Full Stack Web Developer</a>
                 </li>
               </ul>
             </div>
             <hr class="clearfix w-100 d-md-none">
             <div class="col-md-4 mx-auto">
-              <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">CONTACT US</h5>
+              <h5 id="text" class="font-weight-bold text-uppercase mt-3 mb-4 text-primary small">CONTACT US</h5>
               <br>
               <ul class="list-unstyled">
                 <li>
-                  <img class="img-fluid mr-2" src="images/phone-icon.svg" alt=""><a class="text-light font-weight-bold" href="+27 21 461 68 17">+27 21 461 68 17</a>
+                  <img class="img-fluid mr-2" src="images/phone-icon.svg" alt=""><a class="text-light font-weight-bold" href="+27 21 461 68 17" id="text">+27 21 461 68 17</a>
                 </li>
                 <br>
                 <li>
-                  <img class="img-fluid mr-2" src="images/email-icon.svg" alt=""><a class="text-light small" href="#!">hello@themavenacademy.one</a>
+                  <img class="img-fluid mr-2" src="images/email-icon.svg" alt=""><a class="text-light small" href="#!" id="text">hello@themavenacademy.one</a>
                 </li>
                 <br>
                 <li>
-                  <img class="img-fluid mr-2" src="images/location-icon.svg" alt=""><a class="text-light small p-0" href="#!">Office F01A, Brookside Office Park, 11 Imam Haron Road, Claremont, Western Cape, 7708</a>
+                  <img class="img-fluid mr-2" src="images/location-icon.svg" alt=""><a class="text-light small p-0" href="#!" id="text">Office F01A, Brookside Office Park, 11 Imam Haron Road, Claremont, Western Cape, 7708</a>
                 </li>
               </ul>
             </div>
@@ -186,16 +192,16 @@
     </div>
   </section>
   <footer>
-    <nav class="navbar navbar-expand-sm" style="height: 100px; background-color: #000000;">
+    <nav class="navbar navbar-expand-sm" style="height: 100px; background-color: #0E1011;">
       <ul class="navbar-nav">
-        <li class="nav-items text-light ml-5">All Rights Reserved, Maven Academy Ptd()Ltd.</li>
+        <li class="nav-items text-light mr-auto ml-5" id="text">All Rights Reserved, Maven Academy Ptd()Ltd.</li>
       </ul>
-      <div class="ml-auto pr-5">
-        <a href="#"><img class="border rounded bg-primary mx-1" src="images/facebook.svg" alt=""></a>
-       <a href="#"><img class="border rounded bg-primary mx-1" src="images/twitter.svg" alt=""></a>
-        <a href="#"><img class="border rounded bg-primary mx-1" src="images/instagram.svg" alt=""></a>
-    </div>
-    </nav>
+        </div>
+           <div class="ml-auto pr-5">
+            <a href="#"><img class="border rounded bg-primary mx-1" src="images/facebook.svg" alt=""></a>
+             <a href="#"><img class="border rounded bg-primary mx-1" src="images/twitter.svg" alt=""></a>
+              <a href="#"><img class="border rounded bg-primary mx-1" src="images/instagram.svg" alt=""></a>
+          </div> 
     </nav>
   </footer>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
